# rivet

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  handover.md
crates/flockd/: Cargo.toml
crates/flockd/src/: exec.rs  leader.rs  main.rs  reconciler.rs  scheduler.rs  spec.rs  state.rs
crates/flockd/tests/: reconcile.rs  smoke.rs
crates/health-lib/: Cargo.toml
crates/health-lib/src/: lib.rs
crates/iptlb/: Cargo.toml
crates/iptlb/src/: backend.rs  main.rs  rules.rs
crates/iptlb/tests/: change_detection.rs  smoke.rs
crates/merge/: Cargo.toml
crates/merge/src/: main.rs
crates/merge/tests/: smoke.rs
crates/podlet/: Cargo.toml
crates/podlet/src/: cgroups.rs  health.rs  main.rs  workload.rs
crates/podlet/tests/: health_exec.rs  health_http.rs  health_tcp.rs  lifecycle.rs  ports.rs  restart_policy.rs  signal_drain.rs  smoke.rs
crates/probe/: Cargo.toml
crates/probe/src/: main.rs
crates/probe/tests/: smoke.rs
crates/sched/: Cargo.toml
crates/sched-lib/: Cargo.toml
crates/sched-lib/src/: lib.rs
crates/sched/src/: main.rs
crates/sched/tests/: smoke.rs
docs/: audit.md  flockd.md  integration.md  iptlb.md  merge.md  podlet.md  probe.md  quickstart.md  sched.md
scripts/: e2e-local.sh  e2e-vm.sh  flockd-wrapper  flockd.service  git-sync  git-sync.service  git-sync.timer  podlet-heartbeat  podlet-heartbeat.service  podlet-heartbeat.timer  podlet@.service
