[package]
name = "flockd"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
rusqlite.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
