[package]
name = "probe"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
health-lib = { path = "../health-lib" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
