[package]
name = "sched"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
sched-lib = { path = "../sched-lib" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
